--- a/backend/.env
+++ b/backend/.env
@@ -1,44 +1,22 @@
-SECRET_KEY=kljasdf0823hlk0123j_879123$kasdjy_12387jkhgasLIUjhbqwILUjklj
-ENCRYPT_KEY=sdf90kj234y<YUG7YJg278jhkjhui*gjOYU5jhjkkjkl0uj2738123jhbm
-
-
 PORT=8080
 ACTIX_WORKERS=4  # Match CPU cores for optimal performance (was 1)
-
-# HTTP server tuning
-# How long to keep idle connections open (keep-alive). Increase to reduce TCP churn under load balancers.
-HTTP_KEEPALIVE_SECS=60
-# Accept queue backlog size (pending TCP handshakes). Increase if you see SYN backlog drops.
-HTTP_BACKLOG=2048
-# Max new connections per second per worker. Prevents thundering herd connection resets.
-HTTP_MAX_CONN_RATE=512
 
 REDIS_HOST=
 REDIS_PORT=
 REDIS_PASSWORD=
 REDIS_DB=
-WRITE_QUEUE_ENABLED=false
-WRITE_CONCURRENCY=20
-
-# DB_TYPE=mysql
-# MAX_POOL=10  # Optimal for most workloads (reduced from 100)
-# MIN_POOL=2   # Lazy connection creation
-# CONNECT_TIMEOUT=30
-# POOL_MAX_LIFETIME_SECS=1800  # 30 minutes
-# POOL_IDLE_TIMEOUT_SECS=600   # 10 minutes
-# MYSQL_URL=mysql://user:pass@host:port/db
-# MYSQL_URL=mysql://user:pass@host:port/db
-# DB_TYPE=postgres
-# POSTGRES_URL=postgres://user:pass@host:port/db
-# MONGODB_URL=mongodb://user:pass@host:port/db
-# DB_TYPE=mssql
-# MSSQL_URL=mssql://user:pass@host:1433/db
 
 DB_TYPE=sqlite
+MAX_POOL=10
+CONNECT_TIMEOUT=30
+MYSQL_URL=mysql://user:pass@host:port/db
+POSTGRES_URL=postgres://user:pass@host:port/db
+MONGODB_URL=mongodb://user:pass@host:port/db
 SQLITE_URL=sqlite://data.db
 
-DEBUG=True
-LOGGING=True
+DEBUG=true
+LOGGING=true
+REQUIRE_AUTH=true
 BASE_URL=http://localhost:8080
 SECRET_KEY=your_secret_key_here
 ENCRYPT_KEY=your_encrypt_key_here
@@ -50,28 +28,12 @@ LOC_IMAGE=images     # location image file. Will set inside of static directory
 LOC_LOGGING=static/log
 LOC_AUDIT=static/log/audit/events.log # (atau path lain di luar static agar tidak terpublikasi)
 
-
 RATE_LIMIT_LOGIN_PER_MIN=3
-RATE_LIMIT_MUTATE_PER_SEC=20  # Increased from 10 for better throughput
-RATE_LIMIT_GET_PER_SEC=50     # Increased from 20 for better throughput
-
-# Optional: login failure limits over 5-minute window
-# If unset, defaults to max(5, RATE_LIMIT_LOGIN_PER_MIN) per user and max(20, RATE_LIMIT_LOGIN_PER_MIN*5) per IP
-RATE_LIMIT_LOGIN_FAIL_USER=5
-RATE_LIMIT_LOGIN_FAIL_IP=20
+RATE_LIMIT_MUTATE_PER_MIN=10
 
 UPLOAD_LIMIT_MB=5      # Reduced from 10 to save memory
 UPLOAD_TEXT_LIMIT_KB=512  # Reduced from 1024 to save memory
 UPLOAD_MAX_FILES=5     # Reduced from 10 to save memory
 UPLOAD_MAX_FIELDS=100  # Reduced from 200 to save memory
-
-# Query result limits
-LIMIT_DEFAULT=100
-LIMIT_MAX=1000
-JSON_LIMIT_KB=512
-
-# Database collation default (for MySQL/MariaDB)
-# Common values: utf8mb4_general_ci, utf8mb4_bin, utf8mb4_0900_ai_ci
-DEFAULT_COLLATE=utf8mb4_bin
 
 WHITE_LIST_IP=192.168.0.0/24
