--- a/backend/config/entity/project_types.json
+++ b/backend/config/entity/project_types.json
@@ -1,1 +1,203 @@
-{"table":"project_types","primary_key":{"columns":["id"],"auto_increment":false},"foreign_keys":[],"columns":[{"name":"id","auto_increment":true,"nullable":false,"function":"","type_data":"bigint","default_value":null,"encrypt":false},{"name":"name","auto_increment":false,"nullable":false,"function":"","type_data":"varchar(255)","default_value":null,"encrypt":false},{"name":"description","auto_increment":false,"nullable":true,"function":"","type_data":"longtext","default_value":null,"encrypt":false},{"name":"created_at","auto_increment":false,"nullable":true,"function":"","type_data":"timestamp","default_value":null,"encrypt":false},{"name":"updated_at","auto_increment":false,"nullable":true,"function":"","type_data":"timestamp","default_value":null,"encrypt":false},{"name":"deleted_at","auto_increment":false,"nullable":true,"function":"","type_data":"timestamp","default_value":null,"encrypt":false},{"name":"created_by_id","auto_increment":false,"nullable":true,"function":"","type_data":"int","default_value":null,"encrypt":false},{"name":"updated_by_id","auto_increment":false,"nullable":true,"function":"","type_data":"int","default_value":null,"encrypt":false},{"name":"deleted_by_id","auto_increment":false,"nullable":true,"function":"","type_data":"int","default_value":null,"encrypt":false}],"indexes":[{"name":"index_project_types_name","columns":["name"],"unique":false}],"redis":{"keys":["name"],"ttl":3600},"get":{"enable_method":false,"endpoint":"","columns":["project_types.id","project_types.name","project_types.description","project_types.created_at","project_types.updated_at","project_types.deleted_at","project_types.created_by_id","project_types.updated_by_id","project_types.deleted_by_id"],"parameters":["name.like","name.like|id.like","description.like","id.eq","name.eq","created_by_id.eq","updated_by_id.eq","deleted_at.is"],"join_tables":[],"column_groups":[],"order_by":["project_types.id"],"having":[],"where_clauses":[]},"post":{"enable_method":false,"validate_data":"SQL:SELECT TRUE as is_valid FROM project_types WHERE id = {request.id} OR name = {request.name}","pre_process":"","post_process":"","columns":["name","description"]},"put":{"enable_method":false,"validate_data":"","pre_process":"","post_process":"","columns":["name","description"]},"del":{"enable_method":false,"type_delete":"soft","pre_process":"","post_process":"","columns":["id"]},"patch":{"enable_method":false,"pre_process_sp":"CALL sp_update_project_type_metadata","parameters":["updated_by_id"],"return_mode":""},"trace":{"enable_method":false,"insert_into":"project_type_qtys","column_inserts":["qty","project_type_id","project_type_name"],"column_selects":["COUNT(DISTINCT project_types.id) as qty","project_types.id","project_types.name as project_type_name"],"parameters":["project_types.name.eq"],"join_tables":[{"table":"project_types","columns":["id","name"],"logical":"project_types.id = project_types.id","type_join":"inner"}],"column_groups":["project_types.id"],"column_conflicts":["qty","project_type_name"]},"auto_generate":true,"position":{"x":1200.0,"y":0.0}}
+{
+    "table": "project_types",
+    "primary_key": {
+        "columns": [
+            "id"
+        ],
+        "auto_increment": true
+    },
+    "foreign_keys": [],
+    "columns": [
+        {
+            "name": "id",
+            "auto_increment": true,
+            "nullable": false,
+            "function": "",
+            "type_data": "bigint",
+            "default_value": null,
+            "encrypt": false
+        },
+        {
+            "name": "name",
+            "auto_increment": false,
+            "nullable": false,
+            "function": "",
+            "type_data": "varchar(100)",
+            "default_value": null,
+            "encrypt": false
+        },
+        {
+            "name": "description",
+            "auto_increment": false,
+            "nullable": true,
+            "function": "",
+            "type_data": "text",
+            "default_value": null,
+            "encrypt": false
+        },
+        {
+            "name": "enabled",
+            "auto_increment": false,
+            "nullable": true,
+            "function": "",
+            "type_data": "tinyint",
+            "default_value": null,
+            "encrypt": false
+        },
+        {
+            "name": "created_at",
+            "auto_increment": false,
+            "nullable": true,
+            "function": "",
+            "type_data": "datetime",
+            "default_value": null,
+            "encrypt": false
+        },
+        {
+            "name": "updated_at",
+            "auto_increment": false,
+            "nullable": true,
+            "function": "",
+            "type_data": "datetime",
+            "default_value": null,
+            "encrypt": false
+        },
+        {
+            "name": "deleted_at",
+            "auto_increment": false,
+            "nullable": true,
+            "function": "",
+            "type_data": "datetime",
+            "default_value": null,
+            "encrypt": false
+        },
+        {
+            "name": "created_by_id",
+            "auto_increment": false,
+            "nullable": true,
+            "function": "",
+            "type_data": "bigint unsigned",
+            "default_value": null,
+            "encrypt": false
+        },
+        {
+            "name": "updated_by_id",
+            "auto_increment": false,
+            "nullable": true,
+            "function": "",
+            "type_data": "bigint unsigned",
+            "default_value": null,
+            "encrypt": false
+        },
+        {
+            "name": "deleted_by_id",
+            "auto_increment": false,
+            "nullable": true,
+            "function": "",
+            "type_data": "bigint unsigned",
+            "default_value": null,
+            "encrypt": false
+        }
+    ],
+    "indexes": [
+        {
+            "name": "idx_project_type_name",
+            "columns": [
+                "name"
+            ],
+            "unique": true
+        }
+    ],
+    "redis": {
+        "keys": [
+            "name"
+        ],
+        "ttl": 3600
+    },
+    "get": {
+        "enable_method": true,
+        "endpoint": "/project-types",
+        "columns": [
+            "project_types.id",
+            "project_types.name",
+            "project_types.description",
+            "project_types.enabled",
+            "project_types.created_at",
+            "project_types.updated_at",
+            "project_types.deleted_at",
+            "project_types.created_by_id",
+            "project_types.updated_by_id",
+            "project_types.deleted_by_id"
+        ],
+        "parameters": [
+            "name.eq",
+            "enabled.eq"
+        ],
+        "join_tables": [],
+        "column_groups": [],
+        "order_by": [
+            "project_types.name"
+        ],
+        "having": [],
+        "where_clauses": []
+    },
+    "post": {
+        "enable_method": true,
+        "validate_data": "",
+        "pre_process": "",
+        "post_process": "",
+        "columns": [
+            "name",
+            "description",
+            "enabled"
+        ]
+    },
+    "put": {
+        "enable_method": true,
+        "validate_data": "",
+        "pre_process": "",
+        "post_process": "",
+        "columns": [
+            "name",
+            "description",
+            "enabled"
+        ]
+    },
+    "del": {
+        "enable_method": true,
+        "type_delete": "soft",
+        "pre_process": "",
+        "post_process": "",
+        "columns": [
+            "id"
+        ]
+    },
+    "patch": {
+        "enable_method": false,
+        "pre_process_sp": "",
+        "parameters": [],
+        "return_mode": ""
+    },
+    "trace": {
+        "enable_method": false,
+        "insert_into": "",
+        "column_inserts": [],
+        "column_selects": [],
+        "parameters": [],
+        "join_tables": [
+            {
+                "table": "",
+                "columns": [],
+                "logical": "",
+                "type_join": ""
+            }
+        ],
+        "column_groups": [],
+        "column_conflicts": []
+    },
+    "auto_generate": false,
+    "position": {
+        "x": 0.0,
+        "y": 0.0
+    }
+}
